--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
    "main": "index.js",
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "ts-node-esm src/index.ts",
+      "start": "nodemon src/index.ts",
       "typeorm": "typeorm-ts-node-esm"
    },
    "repository": {
@@ -19,13 +19,18 @@
    },
    "homepage": "https://github.com/sandesh1712/qp-assessment#readme",
    "devDependencies": {
-      "ts-node": "10.9.1",
       "@types/node": "^16.11.10",
+      "ts-node": "10.9.1",
       "typescript": "4.5.2"
    },
    "dependencies": {
-      "typeorm": "0.3.20",
+      "@types/express": "^4.17.21",
+      "body-parser": "^1.20.2",
+      "cors": "^2.8.5",
+      "express": "^4.19.2",
+      "mysql2": "^3.9.4",
+      "nodemon": "^3.1.0",
       "reflect-metadata": "^0.1.13",
-      "pg": "^8.4.0"
+      "typeorm": "0.3.20"
    }
 }
