--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
       "typescript": "4.5.2"
    },
    "dependencies": {
+      "@types/bcrypt": "^5.0.2",
       "@types/express": "^4.17.21",
+      "bcrypt": "^5.1.1",
       "body-parser": "^1.20.2",
       "cors": "^2.8.5",
       "express": "^4.19.2",
