--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
    "dependencies": {
       "@types/bcrypt": "^5.0.2",
       "@types/express": "^4.17.21",
+      "@types/jsonwebtoken": "^9.0.6",
       "bcrypt": "^5.1.1",
       "body-parser": "^1.20.2",
       "cors": "^2.8.5",
       "express": "^4.19.2",
+      "jsonwebtoken": "^9.0.2",
       "mysql2": "^3.9.4",
       "nodemon": "^3.1.0",
+      "path-to-regexp": "^6.2.2",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.20"
    }
